2.1.2/_sources/gallery/userdemo/annotate_simple04.rst.txt


.. _sphx_glr_gallery_userdemo_annotate_simple04.py:


=================
Annotate Simple04
=================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple04_001.png
    :align: center





.. code-block:: python

    import matplotlib.pyplot as plt


    fig, ax = plt.subplots(figsize=(3, 3))

    ann = ax.annotate("Test",
                      xy=(0.2, 0.2), xycoords='data',
                      xytext=(0.8, 0.8), textcoords='data',
                      size=20, va="center", ha="center",
                      bbox=dict(boxstyle="round4", fc="w"),
                      arrowprops=dict(arrowstyle="-|>",
                                      connectionstyle="arc3,rad=0.2",
                                      relpos=(0., 0.),
                                      fc="w"),
                      )

    ann = ax.annotate("Test",
                      xy=(0.2, 0.2), xycoords='data',
                      xytext=(0.8, 0.8), textcoords='data',
                      size=20, va="center", ha="center",
                      bbox=dict(boxstyle="round4", fc="w"),
                      arrowprops=dict(arrowstyle="-|>",
                                      connectionstyle="arc3,rad=-0.2",
                                      relpos=(1., 0.),
                                      fc="w"),
                      )

    plt.show()

**Total running time of the script:** ( 0 minutes  0.018 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple04.py <annotate_simple04.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple04.ipynb <annotate_simple04.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
